--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pilant Sequence Task</title>
 </head>
 <body>
     <script src="main.js"></script>
